--- a/css/style.css
+++ b/css/style.css
@@ -302,6 +302,7 @@ img {
   font-weight: 100;
   letter-spacing: 0.15rem;
   line-height: .72rem;
+  text-shadow: 2px 2px 10px #fff;
 }
 .home-eyechatch-text-sp {
   display: none;
@@ -1567,12 +1568,13 @@ h2>.q-mark {
     top: 0;
     left: 0;
     font-size: .48rem;
-    color: #333;
+    color: #626262;
     font-weight: 100;
     margin-left: 66.65vw;
     margin-top: 17.6vw;    
     letter-spacing: 0.18rem;
     line-height: .72rem;
+    text-shadow: 2px 2px 10px #fff;
   }
   /* about */
   .home-about {
