--- a/css/style.css
+++ b/css/style.css
@@ -362,11 +362,27 @@ img {
   width: 22.265625vw;
   font-size: .16rem;
   font-weight: 400;
-  padding: 1.5625vw 0 1.5625vw 2.5vw;
+  /*padding: 1.5625vw 0 1.5625vw 2.5vw;*/
+  padding: 1.4843vw 0 1.4843 2.5vw;
+  
+  /* 56px(menu bar height) - 16px(font-size) = 40px */
+  /* 40px(menu-bar height ) / 2(padding-top + padding-bottom) = 20px */
+  /* 20px(padding-top or padding-bottom) - 1px(border) = 19px */
+  /* 19px / 1280px(window width) x 100 = 1.48438 */
+
+  border: 1px solid #13469a;
   position: relative;
   margin-left: 16.71875vw;
   margin-bottom: 1.5625vw;
 }
+.home-about>.inquiry-texts>.access-menubar>.menubar:hover{
+  /*background-color: #4b73b5;*/
+  background-color: #fff;
+  border: 1px solid #13469a;
+  border-color: #13469a;
+  color: #13469a;
+}
+
 .home-about>.inquiry-texts>.access-menubar:last-of-type>.menubar{
   margin-bottom: 18.75vw;
 } 
