--- a/css/style.css
+++ b/css/style.css
@@ -2438,6 +2438,7 @@ h2>.q-mark {
   }
   .campaign-icon-sp {
     width: 7.2vw;
+    height: 8.533vw;
     padding-left: 9.33vw;
   }
   .campaign-text {
