baloon height pc

--- a/css/style.css
+++ b/css/style.css
@@ -1268,6 +1268,7 @@ h2>.q-mark {
 }
 .campaign-icon-pc {
   width: 3.59375vw;
+  height: 4.140625vw;
   padding-left: 8.59375vw;
 }
 .campaign-icon-sp {
