--- a/css/style.css
+++ b/css/style.css
@@ -668,12 +668,19 @@ img {
   width: 20vw;
   display: block;
   background-color: #13469a;
+  border: 1px solid #13469a;
   color: #fff;
   font-size: .16rem;
   font-weight: 400;
   padding: 1.5625vw 0 1.5625vw 2.5vw;
   position: relative;
 }
+.access-menubar>.menubar:hover {
+  background-color: #fff;
+  border-color: #13469a;
+  color: #13469a;
+}
+
 .access-menubar>.menubar:after {
   position: absolute;
   right: 2.5vw;
