--- a/css/style.css
+++ b/css/style.css
@@ -157,6 +157,25 @@ img {
   font-size: .13rem;
   font-weight: 300;
   vertical-align: text-bottom;
+  position: relative;
+  display: inline-block;
+  text-decoration: none;
+}
+.nav-item>a::after{
+  position: absolute;
+  bottom: -4px;
+  left: 0;
+  content: '';
+  width: 100%;
+  height: 1px;
+  background: #13469a;
+  transform: scale(0, 1);
+  transform-origin: right top;
+  transition: transform .3s;
+}
+.nav-item>a:hover::after {
+  transform-origin: left top;
+  transform: scale(1, 1);
 }
 .hamberger {
   display: none;
