--- a/css/style.css
+++ b/css/style.css
@@ -157,30 +157,42 @@ img {
   font-size: .13rem;
   font-weight: 300;
   vertical-align: text-bottom;
+}
+
+/* g-nav dropdwn */
+.header-navigations>.nav-list>li {
   position: relative;
-  display: inline-block;
-  text-decoration: none;
 }
-.nav-item>a::after{
-  position: absolute;
-  bottom: -4px;
-  left: 0;
-  content: '';
+.dropdwn_menu {
   width: 100%;
-  height: 1px;
-  background: #13469a;
-  transform: scale(0, 1);
-  transform-origin: right top;
-  transition: transform .3s;
+  display: none;
+  position: absolute;
+  background-color: #fff;
+  box-shadow: 0 8px 20px 0 rgba(33, 36, 43, 0.15);
 }
-.nav-item>a:hover::after {
-  transform-origin: left top;
-  transform: scale(1, 1);
+.dropdwn_menu li {
+  width: 100%;
 }
+.dropdwn_menu li a {
+  width: 100%;
+  padding-bottom: 20px;
+  font-size: .13rem;
+  font-weight: 300;
+  display: block;
+  color: #0d3f93;
+}
+.dropdwn_menu li:first-of-type a {
+  padding-top: 20px;
+}
+li a:hover {
+  color: gray;
+}
+
+
+
 .hamberger {
   display: none;
 }
-
 .hamburger-wrapper {
   display: none;
 }
@@ -1610,7 +1622,7 @@ h2>.q-mark {
     margin: 0 2vw;
   }
   .copyright {
-    margin: 27.73vw auto 0 auto;
+    margin: 27.73vw auto 17.6vw auto;
     padding: 4.8vw 0;  
     font-size: .24rem;
     font-weight: 300;
