--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,18 @@ img {
 	height: auto;
 }
 
+/***  scroll effect  ***/
+.effect-fade {
+  opacity : 0;
+  transform : translate(0, 45px);
+  transition : all 800ms;
+}
+  
+.effect-fade.effect-scroll {
+  opacity : 1;
+  transform : translate(0, 0);
+}
+
 
 /***     header     ***/
 .header {
