--- a/css/style.css
+++ b/css/style.css
@@ -1685,10 +1685,7 @@ h2>.q-mark {
     margin-top: 17.6vw;    
     letter-spacing: 0.18rem;
     line-height: .72rem;
-    text-shadow: 2px 1px 3px #fff;
-  }
-  .home-eyechatch-text-sp-white {
-    color: #fff;
+    text-shadow: 1px 1px 10px #fff, 1px -1px 10px #fff, -1px 1px 10px #fff, -1px -1px 10px #fff;
   }
   /* about */
   .home-about {
