--- a/css/style.css
+++ b/css/style.css
@@ -376,7 +376,7 @@ li a:hover {
   font-weight: 100;
   letter-spacing: 0.15rem;
   line-height: .72rem;
-  text-shadow: 2px 2px 10px #fff;
+  text-shadow: 0 0 300px #fff;
 }
 .home-eyechatch-text-sp {
   display: none;
