--- a/css/style.css
+++ b/css/style.css
@@ -376,7 +376,7 @@ li a:hover {
   font-weight: 100;
   letter-spacing: 0.15rem;
   line-height: .72rem;
-  text-shadow: 0 0 300px #fff;
+  text-shadow: 2px 2px 10px #fff;
 }
 .home-eyechatch-text-sp {
   display: none;
@@ -1680,12 +1680,17 @@ h2>.q-mark {
     left: 0;
     font-size: .48rem;
     color: #333;
-    font-weight: 100;
+    font-weight: 300;
     margin-left: 66.65vw;
     margin-top: 17.6vw;    
     letter-spacing: 0.18rem;
     line-height: .72rem;
-    text-shadow: 1px 1px 10px #fff, 1px -1px 10px #fff, -1px 1px 10px #fff, -1px -1px 10px #fff;
+    text-shadow: 2px  2px 5px #fff,
+            -2px  2px 5px #fff,
+             2px -2px 5px #fff,
+            -2px -2px 5px #fff;
+    /*text-shadow: 0 0 30px #ff00f2;*/
+    /*text-shadow: 1px 1px 10px #fff, 1px -1px 10px #fff, -1px 1px 10px #fff, -1px -1px 10px #fff;*/
   }
   /* about */
   .home-about {
