ひとりひとりのcolor変更

--- a/css/style.css
+++ b/css/style.css
@@ -372,7 +372,7 @@ li a:hover {
   margin-left: 57.03125vw;
   margin-top: 17.5vw;
   font-size: .48rem;
-  color: #626262;
+  color: #3d3d3d;
   font-weight: 100;
   letter-spacing: 0.15rem;
   line-height: .72rem;
@@ -1679,7 +1679,7 @@ h2>.q-mark {
     top: 0;
     left: 0;
     font-size: .48rem;
-    color: #626262;
+    color: #3d3d3d;
     font-weight: 300;
     margin-left: 66.65vw;
     margin-top: 17.6vw;    
