--- a/css/style.css
+++ b/css/style.css
@@ -1690,6 +1690,10 @@ h2>.q-mark {
     line-height: .72rem;
     text-shadow: 2px 2px 10px #fff,-2px 2px 10px #fff,2px -2px 10px #fff,-2px -2px 10px #fff;
   }
+  .home-eyechatch-text-sp2 {
+    color: #333;
+    font-weight: 300;
+  }
   /* about */
   .home-about {
     position: static;
