ひとりひとりsp

--- a/css/style.css
+++ b/css/style.css
@@ -1682,8 +1682,8 @@ h2>.q-mark {
     top: 0;
     left: 0;
     font-size: .48rem;
-    color: #3d3d3d;
-    font-weight: 100;
+    color: #626262;
+    font-weight: 200;
     margin-left: 66.65vw;
     margin-top: 17.6vw;    
     letter-spacing: 0.18rem;
