--- a/css/style.css
+++ b/css/style.css
@@ -372,11 +372,11 @@ li a:hover {
   margin-left: 57.03125vw;
   margin-top: 17.5vw;
   font-size: .48rem;
-  color: #626262;
-  font-weight: 100;
+  color: #3d3d3d;
+  font-weight: 200;
   letter-spacing: 0.15rem;
   line-height: .72rem;
-  text-shadow: 2px 2px 10px #fff,-2px 2px 10px #fff,2px -2px 10px #fff,-2px -2px 10px #fff;
+  text-shadow: 2px 2px 5px #fff,-2px 2px 5px #fff,2px -2px 5px #fff,-2px -2px 5px #fff;
 }
 .home-eyechatch-text-sp {
   display: none;
