--- a/css/style.css
+++ b/css/style.css
@@ -1655,7 +1655,7 @@ h2>.q-mark {
     width: 100vw;
   }
   .eyechatch-text {
-    width: 41.466vw; 
+    /*width: 41.466vw; */
     padding: 10.933vw 0;
     padding-right: 8.533vw;
     padding-left: 4.266vw;
