--- a/css/style.css
+++ b/css/style.css
@@ -1886,7 +1886,7 @@ h2>.q-mark {
     line-height: .5rem;
   }
   .home-notice-list {
-    padding: 0 5.33vw 23.466vw 5.33vw;
+    padding: 0 5.33vw 0 5.33vw;
     display: block;
   }
   .home-notice-sns {
