--- a/css/style.css
+++ b/css/style.css
@@ -2763,7 +2763,90 @@ h2>.q-mark {
     top: 0;
     left: 0;   
     z-index: 20;
-  }     
+  }
+
+
+
+
+
+
+
+
+
+
+  
+  /* new */
+  .hamburger-lists {
+    height: 226.66vw;
+    height: 100%;
+    background-color:#13469a;
+    z-index: 20;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  .hamburger-item {
+    font-size: .34rem;        
+    margin-right: 0;
+    font-weight: 500;
+    letter-spacing: .05rem;        
+    color: #fff;  
+    text-align: left;
+    /* padding-left: 10.66vw; */
+  }
+  .hamburger-subitem {
+    font-size: .28rem;
+    font-weight: 300;
+    /* padding-left: 13.3vw; */
+    padding-bottom: 4vw;
+  }
+  .hamburger-list-01, .hamburger-list-02 {
+    padding-top: 35vw;
+  }
+
+  .hamburger-item>a, .hamburger-subitem>.fa-chevron-circle-right::before, .hamburger-subitem>a {
+    color: #fff;
+  }
+
+  .hamburger-list-01>.hamburger-items>.hamburger-item:first-of-type {
+    padding-bottom: 12vw;
+  }
+  .hamburger-list-01>.hamburger-items>.hamburger-subitem:last-of-type {
+    padding-bottom: 12vw;
+  }
+  .hamburger-list-01>.hamburger-items>.hamburger-item {
+    padding-bottom: 5vw;
+  }
+
+
+
+  .hamburger-list-03>.hamburger-items>.hamburger-item {
+    padding-bottom: 12vw;
+  }
+  .hamburger-list-03>.hamburger-items>.hamburger-item:nth-of-type(3) {
+    padding-bottom: 5vw;
+  }
+  .hamburger-list-03>.hamburger-items>.hamburger-subitem {
+    padding-bottom: 5vw;
+  }
+  .hamburger-list-03 {
+    margin-bottom: 400px;
+  }
+
+  .hamburger-list-02>.hamburger-items>.hamburger-item:first-of-type {
+    padding-bottom: 5vw;
+  }
+  .hamburger-list-04>.hamburger-items>.hamburger-item:first-of-type {
+    padding-bottom: 5vw;
+  }
+
+
+
+
+
+  /* backup */
+  /*
   .hamburger-nav {
     height: 226.66vw;
     height: 100%;
@@ -2803,6 +2886,7 @@ h2>.q-mark {
   .hamburger-item>a, .hamburger-subitem>.fa-chevron-circle-right::before, .hamburger-subitem>a {
     color: #fff;
   }
+  */
 
 
   /***********************/
